tests/match/match.exp
Error ----------------------------------------------------------------------------------------------------- body.js:18:3

Cannot cast `out` to empty because boolean [1] is incompatible with empty [2]. [incompatible-cast]

   body.js:18:3
   18|   out as empty; // ERROR
         ^^^

References:
   body.js:13:8
   13|     1: true,
              ^^^^ [1]
   body.js:18:10
   18|   out as empty; // ERROR
                ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- body.js:18:3

Cannot cast `out` to empty because boolean [1] is incompatible with empty [2]. [incompatible-cast]

   body.js:18:3
   18|   out as empty; // ERROR
         ^^^

References:
   body.js:14:8
   14|     2: false,
              ^^^^^ [1]
   body.js:18:10
   18|   out as empty; // ERROR
                ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- body.js:27:3

Cannot cast `out` to empty because boolean [1] is incompatible with empty [2]. [incompatible-cast]

   body.js:27:3
   27|   out as empty; // ERROR
         ^^^

References:
   body.js:23:8
   23|     1: true,
              ^^^^ [1]
   body.js:27:10
   27|   out as empty; // ERROR
                ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- body.js:27:3

Cannot cast `out` to empty because string [1] is incompatible with empty [2]. [incompatible-cast]

   body.js:27:3
   27|   out as empty; // ERROR
         ^^^

References:
   body.js:24:8
   24|     2: 's',
              ^^^ [1]
   body.js:27:10
   27|   out as empty; // ERROR
                ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- body.js:38:3

Cannot cast `out` to empty because boolean [1] is incompatible with empty [2]. [incompatible-cast]

   body.js:38:3
   38|   out as empty; // ERROR
         ^^^

References:
   body.js:34:8
   34|     1: true,
              ^^^^ [1]
   body.js:38:10
   38|   out as empty; // ERROR
                ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- body.js:46:3

Unreachable code. [unreachable-code]

   46|   out; // ERROR: unreachable
         ^^^^


Error ----------------------------------------------------------------------------------------------------- body.js:56:3

Cannot cast `out` to empty because string [1] is incompatible with empty [2]. [incompatible-cast]

   body.js:56:3
   56|   out as empty; // ERROR
         ^^^

References:
   body.js:53:8
   53|     _: 's',
              ^^^ [1]
   body.js:56:10
   56|   out as empty; // ERROR
                ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ matching.js:20:14

Cannot cast `d` to empty because number literal `-2` [1] is incompatible with empty [2]. [incompatible-cast]

   matching.js:20:14
   20|     const d: d as empty, // ERROR: not all members checked
                    ^

References:
   matching.js:3:24
    3|   declare const x: 1 | -2 | 3n | 's' | false | null;
                              ^^ [1]
   matching.js:20:19
   20|     const d: d as empty, // ERROR: not all members checked
                         ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ matching.js:20:14

Cannot cast `d` to empty because string literal `s` [1] is incompatible with empty [2]. [incompatible-cast]

   matching.js:20:14
   20|     const d: d as empty, // ERROR: not all members checked
                    ^

References:
   matching.js:3:34
    3|   declare const x: 1 | -2 | 3n | 's' | false | null;
                                        ^^^ [1]
   matching.js:20:19
   20|     const d: d as empty, // ERROR: not all members checked
                         ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ matching.js:39:14

Cannot cast `d` to empty because number literal `2` [1] is incompatible with empty [2]. [incompatible-cast]

   matching.js:39:14
   39|     const d: d as empty, // ERROR: `2` not checked
                    ^

References:
   matching.js:26:24
   26|   declare const x: 1 | 2;
                              ^ [1]
   matching.js:39:19
   39|     const d: d as empty, // ERROR: `2` not checked
                         ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ matching.js:55:14

Cannot cast `d` to empty because undefined [1] is incompatible with empty [2]. [incompatible-cast]

   matching.js:55:14
   55|     const d: d as empty, // ERROR: `undefined` not checked
                    ^

References:
   matching.js:45:24
   45|   declare const x: 1 | void;
                              ^^^^ [1]
   matching.js:55:19
   55|     const d: d as empty, // ERROR: `undefined` not checked
                         ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ matching.js:72:14

Cannot cast `d` to empty because null or undefined [1] is incompatible with empty [2]. [incompatible-cast]

   matching.js:72:14
   72|     const d: d as empty, // ERROR: `null` and `undefined` not checked
                    ^

References:
   matching.js:61:20
   61|   declare const x: ?1;
                          ^^ [1]
   matching.js:72:19
   72|     const d: d as empty, // ERROR: `null` and `undefined` not checked
                         ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------ matching.js:93:14

Cannot cast `d` to empty because number literal `2` [1] is incompatible with empty [2]. [incompatible-cast]

   matching.js:93:14
   93|     const d: d as empty, // ERROR: `2` not checked
                    ^

References:
   matching.js:78:24
   78|   declare const x: 1 | 2;
                              ^ [1]
   matching.js:93:19
   93|     const d: d as empty, // ERROR: `2` not checked
                         ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- matching.js:138:14

Cannot cast `d` to empty because number literal `2` [1] is incompatible with empty [2]. [incompatible-cast]

   matching.js:138:14
   138|     const d: d as empty, // ERROR: `2` not checked
                     ^

References:
   matching.js:128:30
   128|   declare const f: () => 1 | 2;
                                     ^ [1]
   matching.js:138:19
   138|     const d: d as empty, // ERROR: `2` not checked
                          ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- matching.js:153:14

Cannot cast `d` to empty because number literal `3` [1] is incompatible with empty [2]. [incompatible-cast]

   matching.js:153:14
   153|     const d: d as empty, // ERROR: `3` not checked
                     ^

References:
   matching.js:144:28
   144|   declare const x: 1 | 2 | 3;
                                   ^ [1]
   matching.js:153:19
   153|     const d: d as empty, // ERROR: `3` not checked
                          ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------- matching.js:166:14

Cannot cast `d` to empty because number literal `2` [1] is incompatible with empty [2]. [incompatible-cast]

   matching.js:166:14
   166|     const d: d as empty, // ERROR: `2` not checked
                     ^

References:
   matching.js:159:24
   159|   declare const x: 1 | 2;
                               ^ [1]
   matching.js:166:19
   166|     const d: d as empty, // ERROR: `2` not checked
                          ^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- patterns.js:9:3

Cannot cast `out` to empty because number [1] is incompatible with empty [2]. [incompatible-cast]

   patterns.js:9:3
   9|   out as empty; // ERROR
        ^^^

References:
   patterns.js:3:20
   3|   declare const x: number;
                         ^^^^^^ [1]
   patterns.js:9:10
   9|   out as empty; // ERROR
               ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- patterns.js:20:3

Cannot cast `out` to empty because number [1] is incompatible with empty [2]. [incompatible-cast]

   patterns.js:20:3
   20|   out as empty; // ERROR
         ^^^

References:
   patterns.js:14:20
   14|   declare const x: number;
                          ^^^^^^ [1]
   patterns.js:20:10
   20|   out as empty; // ERROR
                ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- patterns.js:31:3

Cannot resolve name `a`. [cannot-resolve-name]

   31|   a; // ERROR: cannot resolve name
         ^


Error ------------------------------------------------------------------------------------------------- patterns.js:42:3

Cannot cast `out` to empty because number [1] is incompatible with empty [2]. [incompatible-cast]

   patterns.js:42:3
   42|   out as empty; // ERROR
         ^^^

References:
   patterns.js:36:21
   36|   declare const x: [number];
                           ^^^^^^ [1]
   patterns.js:42:10
   42|   out as empty; // ERROR
                ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- patterns.js:54:3

Cannot cast `out` to empty because number [1] is incompatible with empty [2]. [incompatible-cast]

   patterns.js:54:3
   54|   out as empty; // ERROR
         ^^^

References:
   patterns.js:47:26
   47|   declare const x: {foo: number};
                                ^^^^^^ [1]
   patterns.js:54:10
   54|   out as empty; // ERROR
                ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- patterns.js:66:3

Cannot cast `out` to empty because number [1] is incompatible with empty [2]. [incompatible-cast]

   patterns.js:66:3
   66|   out as empty; // ERROR
         ^^^

References:
   patterns.js:59:26
   59|   declare const x: {foo: number};
                                ^^^^^^ [1]
   patterns.js:66:10
   66|   out as empty; // ERROR
                ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- patterns.js:79:3

Cannot cast `out` to empty because number [1] is incompatible with empty [2]. [incompatible-cast]

   patterns.js:79:3
   79|   out as empty; // ERROR
         ^^^

References:
   patterns.js:71:33
   71|   declare const x: {foo: [{bar: number}]};
                                       ^^^^^^ [1]
   patterns.js:79:10
   79|   out as empty; // ERROR
                ^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- patterns.js:87:6

Cannot use variable `a` [1] because the declaration either comes later or was skipped. [reference-before-declaration]

   patterns.js:87:6
   87|     [a, const a]: a, // ERROR: reference before declaration
            ^

References:
   patterns.js:87:15
   87|     [a, const a]: a, // ERROR: reference before declaration
                     ^ [1]


Error ------------------------------------------------------------------------------------------------ patterns.js:99:23

Cannot cast `n` to empty because number [1] is incompatible with empty [2]. [incompatible-cast]

   patterns.js:99:23
   99|     {foo: const n} if n as empty: n, // ERROR
                             ^

References:
   patterns.js:93:26
   93|   declare const x: {foo: number};
                                ^^^^^^ [1]
   patterns.js:99:28
   99|     {foo: const n} if n as empty: n, // ERROR
                                  ^^^^^ [2]



Found 25 errors
